--- a/bio.html
+++ b/bio.html
@@ -2,7 +2,7 @@
 <html>
          <head>
                <meta charset="UTF-8">
-               <title> Home </title>
+               <title> Bio </title>
                <link rel="stylesheet" type="text/css" href="css/css_index.css">
          </head>
 
@@ -21,6 +21,7 @@
                   <li><a href="tasos.html">Αναστάσιος</a></li>
              </ul>
          </p>
+
 
          </body>
 </html>
