update tasos.html,bio.html add image

--- a/bio.html
+++ b/bio.html
@@ -21,7 +21,8 @@
                   <li><a href="tasos.html">Αναστάσιος</a></li>
              </ul>
          </p>
-
-
+         <p align="center">
+          <a href="giannis.html"> Γιαννης Γρένδας </a>  &nbsp;  <a href="xristos.html"> Χρήστος Βενετόπουλος </a>  &nbsp;  <a href="tasos.html">Αναστάσιος Παυλίδης</a>
+         </p>
          </body>
 </html>
