--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
              </ul>
          </p>
          <p align="center">
-          <a href="giannis.html"> Γιαννης Γρένδας </a>  &nbsp;  <a href="xristos.html"> Χρήστος Βενετόπουλος </a>  &nbsp;  <a href="tasos.html">Αναστάσιος Παυλίδης</a>
+          <a href="giannis.html"> Γιαννης Γρένδας</a>  &nbsp;&nbsp;  <a href="xristos.html"> Χρήστος Βενετόπουλος</a>  &nbsp;&nbsp;  <a href="tasos.html">Αναστάσιος Παυλίδης</a>
          </p>
          </body>
 </html>
